--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.11.0",
     "daisyui": "^5.1.9",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
