--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.87.4",
     "axios": "^1.11.0",
     "daisyui": "^5.1.9",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-router": "^7.8.2",
     "react-tabs": "^6.1.0",
     "tailwindcss": "^4.1.13"
