--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-paginate": "^8.3.0",
     "react-router": "^7.8.2",
     "react-tabs": "^6.1.0",
+    "sweetalert2": "^11.23.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
