--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "axios": "^1.11.0",
     "daisyui": "^5.1.9",
     "firebase": "^12.2.1",
+    "quill": "^2.0.3",
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
+    "react-quilljs": "^2.0.5",
     "react-router": "^7.8.2",
     "react-tabs": "^6.1.0",
     "sweetalert2": "^11.23.0",
