--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mantine/core": "^5.10.5",
@@ -19,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.11.0",
+    "ckeditor5": "^46.1.1",
     "daisyui": "^5.1.9",
     "firebase": "^12.2.1",
     "quill": "^2.0.3",
